2013-08-15  Glenn Morris  <rgm@gnu.org>

	* make-dist: Do not distribute etc/refcards TeX intermediate files.
	* Makefile.in (install-arch-indep):
	Do not install etc/refcards TeX intermediate files.

2013-08-14  Ulrich Müller  <ulm@gentoo.org>

	* configure.ac (EMACS_CONFIGURATION): Escape backslashes.  (Bug#15091)

2013-08-12  Eli Zaretskii  <eliz@gnu.org>

	* configure.ac (HAVE_ZLIB): Don't use -lz on MinGW.

2013-08-12  Paul Eggert  <eggert@cs.ucla.edu>

	Minor zlib configuration tweaks.
	* configure.ac (HAVE_ZLIB): Don't assume zlib is linked if PNG is.

2013-08-12  Eli Zaretskii  <eliz@gnu.org>

	* configure.ac (LIBZ): Comment on w32 peculiarities regarding LIBZ.

2013-08-12  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2013-08-11 fpending: port to recent Cygwin change to stdio_ext.h
	2013-08-10 sys_time: port to OpenBSD

2013-08-12  Glenn Morris  <rgm@gnu.org>

	* configure.ac (etcdocdir): Rename from docdir, to avoid confusion
	with configure's standard --docdir argument.  All uses updated.
	* Makefile.in (etcdocdir): Rename from docdir.  All uses updated.
	(install-etcdoc): Rename from install-doc.  All uses updated.
	(uninstall): Run uninstall-doc.
	(PSS): Add misc-ps.
	(INSTALL_DVI, INSTALL_HTML, INSTALL_PDF, INSTALL_PS)
	(INSTALL_DOC, UNINSTALL_DVI, UNINSTALL_HTML, UNINSTALL_PDF)
	(UNINSTALL_PS, UNINSTALL_DOC): New variables.
	($(INSTALL_DOC), install-doc, install-dvi, install-html, install-pdf)
	(install-ps, $(UNINSTALL_DOC), uninstall-doc, uninstall-dvi)
	(uninstall-html, uninstall-pdf, uninstall-ps): New .PHONY rules.

2013-08-11  Paul Eggert  <eggert@cs.ucla.edu>

	Add --with-zlib to 'configure'.
	* configure.ac: Add --with-zlib option to 'configure', so that Emacs
	can be built without zlib.  Don't assume that -lz is needed on
	non-PNG hosts.  Mention zlib configuration status in 'configure' output.

2013-08-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* configure.ac: Test for zlib.
